[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/ShipPanel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ShipInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/CloseButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=7]
[ext_resource path="res://Scenes/Drives.tscn" type="PackedScene" id=8]
[ext_resource path="res://Graphics/Icons/Arrow.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Science/SCT.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Science/CD.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Buttons/Upgrade.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Upgrade.tscn" type="PackedScene" id=13]

[node name="Background" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -296.0
margin_right = 512.0
margin_bottom = 296.0
theme = ExtResource( 7 )
script = ExtResource( 3 )

[node name="CloseButton" parent="." instance=ExtResource( 6 )]

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 38 )
text = "SHIPS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 96.0
margin_right = -8.0
margin_bottom = -4.0
custom_constants/vseparation = -2
custom_constants/hseparation = -2
columns = 2

[node name="Panel1" parent="GridContainer" instance=ExtResource( 5 )]
margin_right = 505.0
margin_bottom = 494.0
victory_screen = false

[node name="Panel2" parent="GridContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 531.0
margin_right = 1064.0
margin_bottom = 496.0
victory_screen = false
id = 1

[node name="Panel3" parent="GridContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 531.0
margin_right = 1064.0
margin_bottom = 496.0
victory_screen = false
id = 2

[node name="Panel4" parent="GridContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 531.0
margin_right = 1064.0
margin_bottom = 496.0
victory_screen = false
id = 3

[node name="Drives" parent="." instance=ExtResource( 8 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 96.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" parent="." instance=ExtResource( 13 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 88.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -504.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelETA" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.0
margin_bottom = 12.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Panel"]
anchor_bottom = 1.0
margin_left = 40.0
margin_right = 290.0
theme = ExtResource( 7 )
custom_constants/hseparation = 11
text = "SHOW_WEAPON_XPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DriveButton" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -24.0
margin_right = -72.0
margin_bottom = 20.0
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Panel"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -24.0
margin_right = -60.0
margin_bottom = 24.0
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="GoToShips" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -24.0
margin_right = -14.0
margin_bottom = 24.0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -20.0
margin_right = -128.0
margin_bottom = 20.0
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="close_button_pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="toggled" from="Panel/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="mouse_entered" from="Panel/DriveButton" to="." method="_on_DriveButton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/DriveButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/DriveButton" to="." method="_on_DriveButton_pressed"]
[connection signal="mouse_entered" from="Panel/BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/BackButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="Panel/GoToShips" to="." method="_on_GoToShips_mouse_entered"]
[connection signal="mouse_exited" from="Panel/GoToShips" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/GoToShips" to="." method="_on_GoToShips_pressed"]
[connection signal="mouse_entered" from="Panel/UpgradeButton" to="." method="_on_UpgradeButton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/UpgradeButton" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
